Added placeholder text

--- a/YoutubeBlock.cshtml
+++ b/YoutubeBlock.cshtml
@@ -1,4 +1,4 @@
-@model <ADDYOURNAMESPACE></ADDYOURNAMESPACE>.Models.Blocks.YoutubeBlock
+@model <ADDYOURNAMESPACE>.Models.Blocks.YoutubeBlock
 
 <iframe 
     width="560" height="315" 
